[SITES-25247] fixed overlapped elements on 320px

--- a/ui.frontend/src/main/webpack/base/sass/_grid.scss
+++ b/ui.frontend/src/main/webpack/base/sass/_grid.scss
@@ -22,6 +22,10 @@
 .aem-Grid {
   display: block;
   width: 100%;
+
+  @media (max-width: $screen-xxsmall) {
+    margin-top: 50px;
+  }
 }
 
 .aem-Grid::before,
