--- a/ui.frontend/src/main/webpack/base/sass/_variables.scss
+++ b/ui.frontend/src/main/webpack/base/sass/_variables.scss
@@ -36,6 +36,7 @@ $gutter-padding: 14px;
 
 $max-width: 1164px;
 $max-body-width: 1680px;
+$screen-xxsmall: 320px;
 $screen-xsmall: 475px;
 $screen-small: 767px;
 $screen-medium: 1024px;
